# agent-prod

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  FINAL_ASSESSMENT.md  GAP_CLOSURE.md  INTEGRATION.md  LICENSE  MATURITY_AUDIT.md  OPS_MANUAL.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  TECHNICAL_PLAN.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
deploy/: agent-prod.nginx  agent-prod@.service
deploy/grafana/dashboards/: agent_prod_overview.json
deploy/observability/: prometheus.yml
docker/: Dockerfile
docker/postgres/: init.sql
docs/: CALIBRATION.md  DEMO.md  DESIGN.md  DISCOVERY.md  DOGFOOD_REPORT.md  MCP_INTEGRATION.md  SUBMISSION_GUIDE.md  USAGE.md
docs/plans/: 2026-06-23-full-roadmap.md
examples/: README.md  basic_trace.py  gray_release_demo.py  quick_answer_quality.py  regression_detection_demo.py
infra/: setup.sh
scripts/: backfill_qclaw.py  backfill_sessions.py  benchmark.sh  claude-proxy.sh  demo_terminal.sh  guard.sh  replay_sessions.py  stress_test.py
skills/: cross_validation.py  error_recovery.py
src/: .env.example  README.md  docker-compose.yml  mock_llm_server.py
src/agent_prod/: __about__.py  __init__.py  __main__.py  cli.py  cli_common.py  cli_configure.py  cli_feedback.py  cli_init.py  cli_stats.py  client.py  mcp_server.py  trace_client.py
src/agent_prod/a2a/: __init__.py
src/agent_prod/adaptivity/: __init__.py  adaptive_gates.py  causal_attributor.py  data_flywheel.py  loop_orchestrator.py
src/agent_prod/agent/: __init__.py  budget.py  llm.py  runtime.py  tools.py  tools_extended.py
src/agent_prod/benchmark/: __init__.py  benchmarks.yaml  run.py
src/agent_prod/gates/: __init__.py  alerts.py  approval.py  argument_inspection.py  attribution.py  auth_grants.py  config.yaml  config_schema.py  domain_policy.py  engine.py  error_classifier.py  errors.py  gate0_permission.py  gate1_execution.py  gate2_trace.py  gate3_regression.py  gate4_gray.py  gate5_audit.py  gate6_answer_quality.py  gate7_execution_consistency.py  intent_classifier.py  interface.py  metrics.py  models.py  provenance.py  reasoning.py  repository.py  run_demo.py  thresholds.py  tool_executor.py  tool_risk.py  trust_chain.py
src/agent_prod/gateway/: __init__.py  gateway.py
src/agent_prod/hermes_plugin/: __init__.py  plugin.yaml
src/agent_prod/ingest/: __init__.py  feedback.py  hermes_sessions.py  parser.py  watchdog.py
src/agent_prod/integration/: __init__.py  decorator.py  hermes_evaluator.py  qclaw_parser.py  qclaw_watchdog.py
src/agent_prod/lifecycle/: __init__.py  eval_loop.py  loop_state.py  memory.py  messages.py  task_state.py
src/agent_prod/observability/: __init__.py  execution_log.py  metrics.py  otel.py
src/agent_prod/registry/: __init__.py
src/agent_prod/server/: __init__.py  anthropic_proxy.py  app.py  config.py  proxy_heartbeat.py  proxy_session.py  schemas.py  security.py  sse.py  state.py
src/agent_prod/testing/: __init__.py  benchmark.py  gate_stress.py  governance.py  loop_engine.py  optimizer.py  profiling.py  release_manager.py  replay.py  threshold_heatmap.py
src/agent_prod/trace/: __init__.py  adapters.py  models.py
src/infra/: init.sql  prometheus.yml
src/skills/: __init__.py
src/tools/: __init__.py  calculator.py
tests/: conftest.py  stress_coding_agent.py  stress_concurrent.py  stress_gradient_degradation.py  stress_long_cycle.py  stress_multi_agent.py  stress_multi_round.py  stress_plan_execution.py  test_alerts.py  test_anthropic_proxy.py  test_attribution.py  test_benchmark_stress.py  test_cli_configure.py  test_cli_feedback.py  test_cli_stats.py  test_e2e_flywheel.py  test_gate2_dag.py  test_gates_core.py  test_gateway_failopen.py  test_loop_orchestrator.py  test_loop_state.py  test_orch_governance.py  test_per_agent_thresholds.py  test_phase11_causal.py  test_phase1_real.py  test_phase3_approval.py  test_phase5_trust_chain.py  test_proxy_session.py  test_pytest_runner.py  test_qclaw_watchdog.py  test_repository_edge.py  test_server_e2e.py  test_tool_risk_auto_classify.py
tools/: calibrate_thresholds.py
