[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-prod"
version = "1.0.0"
description = "Production AI agent quality gate and risk control framework for LLMOps, agent evaluation, regression detection, gray release, audit, and observability"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fang.zheng", email = "fangzheng698@gmail.com"},
]
maintainers = [
    {name = "fang.zheng", email = "fangzheng698@gmail.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "structlog>=23.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
prometheus = ["prometheus-client>=0.19"]
tracing = ["opentelemetry-exporter-otlp-proto-grpc>=1.20"]
unleash = ["UnleashClient>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/fangzheng698-lang/agent-prod"
Documentation = "https://github.com/fangzheng698-lang/agent-prod"

[project.scripts]
agent-prod = "agent_prod.cli:main"
agent-prod-mcp = "agent_prod.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# causal_attributor uses mathematical notation (X, XtX, Xty, etc.)
"src/agent_prod/adaptivity/causal_attributor.py" = ["N803", "N806"]
# Conditional imports for optional dependencies
"src/agent_prod/gates/gate1_execution.py" = ["E402"]
"src/agent_prod/gates/gate2_trace.py" = ["E402", "F401"]
"src/agent_prod/gates/gate3_regression.py" = ["E402", "SIM102"]
"src/agent_prod/gates/gate4_gray.py" = ["E402"]
"src/agent_prod/gates/gate5_audit.py" = ["E402"]
"src/agent_prod/server/app.py" = ["E402"]
# Enum mixin pattern: str + Enum is intentional for serialization
"src/agent_prod/gates/models.py" = ["UP042"]
"src/agent_prod/lifecycle/task_state.py" = ["UP042", "N818"]
"src/agent_prod/trace/models.py" = ["UP042"]
"src/agent_prod/testing/release_manager.py" = ["UP042"]
"src/agent_prod/testing/governance.py" = ["N817", "N806"]
# SIM/C401 style suggestions — not bugs
"src/agent_prod/adaptivity/data_flywheel.py" = ["SIM108", "SIM105"]
"src/agent_prod/gateway/gateway.py" = ["C401"]
"src/agent_prod/testing/gate_stress.py" = ["SIM102", "SIM108"]
"src/agent_prod/observability/metrics.py" = ["B905"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "mock_llm_server/"]

[[tool.mypy.overrides]]
module = [
    "click.*",
    "uvicorn.*",
    "structlog.*",
    "UnleashClient.*",
    "asyncpg.*",
    "sqlalchemy.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "pydantic.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:starlette.exceptions.StarletteDeprecationWarning",
]
